--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,9 @@
   "deno.enable": true,
   "yaml.schemas": {
     "https://json.schemastore.org/github-workflow.json": "file:///Users/kong.hou/Github/blackPepper/.github/workflows/deploy.yml"
+  },
+  "editor.suggest.showStatusBar": true,
+  "editor.quickSuggestions": {
+    "strings": true
   }
 }
