--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,5 +19,5 @@ jobs:
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: "black-pepper"
+          project: "kong"
           entrypoint: "./main.ts" # TODO: update entrypoint
